--- a/themes/chord/source/css/post/share.styl
+++ b/themes/chord/source/css/post/share.styl
@@ -16,9 +16,9 @@
   &:hover
     background-color black
     color white
-  i
+  .fab
     flex 0 1 auto
-    margin auto
+    padding 12px
 
 #hatebu
   img
