--- a/themes/chord/layout/post.pug
+++ b/themes/chord/layout/post.pug
@@ -5,7 +5,7 @@ block title
 
 block style
   link(rel="stylesheet", href=url_for("/css/post/post.css"))
-  script(src='https://kit.fontawesome.com/da314288dc.js', crossorigin='anonymous')
+  //- script(src='https://kit.fontawesome.com/da314288dc.js', crossorigin='anonymous')
 
   if page.code === true
     link(rel="stylesheet", href=url_for("/css/font.css"))
