[update] loading css

--- a/themes/chord/layout/_include/share.pug
+++ b/themes/chord/layout/_include/share.pug
@@ -1,4 +1,4 @@
-link(rel="stylesheet", href=url_for("/css/post/share.css"))
+link(rel="stylesheet", href=url_for("/css/post/share.css"), media="print", onload="this.media='all'")
 
 // This SVG is used in combination with some of the following libraries:
 // Font Awesome Free by @fontawesome - https://fontawesome.com
