--- a/themes/chord/layout/_include/footer.pug
+++ b/themes/chord/layout/_include/footer.pug
@@ -1,4 +1,4 @@
-link(rel="stylesheet", href=url_for("/css/component/footer.css"))
+link(rel="stylesheet", href=url_for("/css/component/footer.css"), media="print", onload="this.media='all'")
 footer
   nav
     a(href=url_for("/")) Top
