--- a/themes/chord/layout/_include/head.pug
+++ b/themes/chord/layout/_include/head.pug
@@ -31,8 +31,8 @@ head(prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.
 
   block title
 
-  link(rel="stylesheet", href=url_for("/css/lib/ress.min.css"))
-  link(rel="stylesheet", href=url_for("/css/base.css"))
+  link(rel="stylesheet", href=url_for("/css/lib/ress.min.css"), media="print", onload="this.media='all'")
+  link(rel="stylesheet", href=url_for("/css/base.css"), media="print", onload="this.media='all'")
 
   block style
 
