--- a/themes/chord/layout/_include/header.pug
+++ b/themes/chord/layout/_include/header.pug
@@ -1,4 +1,4 @@
-link(rel="stylesheet", href=url_for("/css/component/header.css"))
+link(rel="stylesheet", href=url_for("/css/component/header.css"), media="print", onload="this.media='all'")
 header
   a(href=url_for("/"))
   #site__name
