--- a/themes/chord/layout/_include/paginator.pug
+++ b/themes/chord/layout/_include/paginator.pug
@@ -1,5 +1,5 @@
 if page.prev || page.next
-  link(rel="stylesheet", href=url_for("/css/component/paginator.css"))
+  link(rel="stylesheet", href=url_for("/css/component/paginator.css"), media="print", onload="this.media='all'")
   #paginator
     if page.layout === "post"
       if page.prev
