--- a/themes/chord/source/css/index.styl
+++ b/themes/chord/source/css/index.styl
@@ -49,3 +49,9 @@ header
     font-size 20px
     text-align center
     color #333
+
+#index--hr
+  margin 0 80px
+
+#index--pagination
+  margin 0 100px
