--- a/themes/chord/source/css/index.styl
+++ b/themes/chord/source/css/index.styl
@@ -27,17 +27,28 @@ header
     transition-duration 0.3s
 
 .post--eye-catch
+  position relative
   border-radius  5px 5px 0 0
   max-width  100%
   height  240px
   background-color #1fae89
+
+.eye-catch--year
+  color #fdfdfd
+  background-color #424242
+  font-size 1.3em
+  width 30%
+  position absolute
+  top 5%
+  left 0
+  padding-left 16px
 
 .eyecatch--text
   width 100%
   height 40%
   margin auto
   text-align center
-  color white
+  color #fdfdfd
   font-size 85px
   letter-spacing .1em
 
@@ -49,6 +60,9 @@ header
     font-size 20px
     text-align center
     color #333
+    overflow hidden
+    white-space nowrap
+    text-overflow ellipsis
 
 #index--hr
   margin 0 80px
