[add] tag page layout

--- a/themes/chord/layout/_include/layout.pug
+++ b/themes/chord/layout/_include/layout.pug
@@ -4,11 +4,12 @@ doctype
 html(lang=config.language)
   include ./head.pug
   body
-    include ./header.pug
+    #wrapper
+      include ./header.pug
 
-    section.content
-      block content
-      block pagination
+      section.content
+        block content
+        block pagination
 
-    include ./footer.pug
+      include ./footer.pug
     include ./scripts.pug
