--- a/themes/chord/source/css/base.styl
+++ b/themes/chord/source/css/base.styl
@@ -6,6 +6,13 @@ body
   font-family $font_family
   font-style normal
   font-weight 400
+  height 100vh
+  width 100vw
+
+#wrapper
+  display flex
+  flex-direction column
+  min-height 100%
 
 a
   color #1FAE89
