--- a/themes/chord/source/css/component/footer.styl
+++ b/themes/chord/source/css/component/footer.styl
@@ -1,9 +1,10 @@
 @import "../_variables"
 footer
+  width 100%
   background-color $font_color
-  margin 0 auto
   text-align center
   color $bg_color
+  margin-top auto
 
   a
     color $lv1_color
