--- a/themes/chord/source/css/tag-page.styl
+++ b/themes/chord/source/css/tag-page.styl
@@ -1,6 +1,11 @@
 .content
   width 100%
 
+#tag-page--title
+  font-size 2em
+  width 80%
+  margin 0 auto
+
 .posts
   display flex
   flex-direction row
