--- a/themes/chord/source/css/post/notations.styl
+++ b/themes/chord/source/css/post/notations.styl
@@ -111,6 +111,33 @@ article.content__post
     tr:nth-child(even)
       background #DDFEE4
 
+    // コメントアウト
+    .accordion
+      max-width 600px
+      border 3px solid #ccc
+      margin 1em
+
+    .accordion--title
+      display block
+      padding 15px
+      line-height 1
+      cursor pointer
+      background-color #ccc
+      color #888
+
+      &::before
+        content '// '
+
+    .accordion--content
+      height 0
+      background-color #cccccc55
+      overflow hidden
+      font-style italic
+      transition all 0.5s
+
+    .accordion--title-checkbox
+        display none
+
 @media screen and (max-width 959px)
   article.content__post
     hr#top
