--- a/themes/chord/source/css/post/notations.styl
+++ b/themes/chord/source/css/post/notations.styl
@@ -113,9 +113,9 @@ article.content__post
 
     // コメントアウト
     .accordion
-      max-width 600px
+      width 100%
       border 3px solid #ccc
-      margin 1em
+      margin 20px 0
 
     .accordion--title
       display block
