--- a/themes/chord/source/css/post.css
+++ b/themes/chord/source/css/post.css
@@ -2,6 +2,8 @@ p {
   text-indent: 1rem;
 }
 
+/* Heading */
+
 h1,
 h2,
 h3 {
@@ -30,15 +32,30 @@ h3 {
   @apply text-xl;
   @apply text-gray-700;
 
-  @apply border-b-2;
+  @apply border-b;
   @apply border-solid;
   @apply border-gray-700;
 
-  @apply pl-4;
+  @apply pl-2;
 }
 
 h3::before {
   content: "##";
 
   @apply mr-2;
+}
+
+/* List */
+
+ul,
+ol {
+  @apply ml-12;
+  @apply mb-4;
+}
+
+li {
+  @apply list-disc;
+  @apply leading-normal;
+
+  @apply py-1;
 }
